# anthy

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  README.old  aclocal.m4  anthy.pc.in  configure  configure.ac
alt-cannadic/: Makefile.in
anthy/: Makefile.am  Makefile.in  anthy.h  convdb.h  depgraph.h  feature_set.h  segclass.h  segment.h  splitter.h  wtype.h  xchar.h
calctrans/: Makefile.am  Makefile.in  calctrans.c  corpus.1.txt  corpus.c  corpus_info  input_set.c  input_set.h  proccorpus.c  raw.1.txt
depgraph/: Makefile.am  Makefile.in  a.depword  conjugate.depword  conjugate.table  fix.depword  indepword.txt  master.depword  mkdepgraph.c  v.depword
doc/: Makefile.am  Makefile.in
mkanthydic/: Makefile.am  Makefile.in  mkfiledic.c
mkworddic/: Makefile.am  Makefile.in  base.t  calcfreq.c  compound.t  dict.args.in  extra.t  mkdic.c  mkdic.h  name.t  readwords.c  utf8.t  words.ld  writewords.c
src-diclib/: Makefile.am  Makefile.in  xchar.c
src-main/: Makefile.am  Makefile.in  context.c  main.c
src-ordering/: Makefile.in  candhistory.c  candsort.c  candswap.c  commit.c  infosort.c
src-splitter/: Makefile.am  Makefile.in  compose.c  depgraph.c  evalborder.c  lattice.c  metaword.c  segclass.c  splitter.c  wordborder.h  wordlist.c
src-util/: Makefile.am  Makefile.in  agent.c  anthy.el  convdb.c  input.c  morph-main.c
src-worddic/: Makefile.am  Makefile.in  dic_main.h  dic_util.c  ext_ent.c  feature_set.c  priv_dic.c  ptab.h  record.c  word_dic.c  word_lookup.c  wtab.h  wtype.c
test/: Makefile.am  Makefile.in  check.c  main.c  prediction.c  test.exp  test.txt
